--- a/all_salary.html
+++ b/all_salary.html
@@ -55,6 +55,7 @@
                     <th scope="col">其他加給</th>
                     <th scope="col">伙食費</th>
                     <th scope="col">總金額</th>
+                    <th scope="col">核發</th>
                 </tr>
             </thead>
             <tbody>
