--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                     <div class="card-body">
                         <h5 class="card-title">我們的理念</h5>
                         <p class="card-text">
-                            長青醫院致力於打造一個以人為本的醫療環境，強調病患的尊嚴、溝通與整合性照護。我們相信每一位患者都值得被全心對待。
+                            洛聖都醫護局致力於打造一個以人為本的醫療環境，強調病患的尊嚴、溝通與整合性照護。我們相信每一位患者都值得被全心對待。
                         </p>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                                     <h5>🤝 醫院院合作企業優惠</h5>
                                     <ul class="list-unstyled">
                                         <li>警局（憑警徽就醫及購買醫療用品享8折優惠）</li>
-                                        <li>車廠（老闆親自買醫療用品享8折優惠）</li>
+                                        <li>車廠（老闆親自買醫療用品享7折優惠）</li>
                                         <li>朝銘（老闆親自買醫療用品享8折優惠）</li>
                                     </ul>
                                 </div>
