--- a/team.html
+++ b/team.html
@@ -98,6 +98,7 @@
                         <div>
                             <span class="badge bg-success badge-skill">執刀資格</span>
                             <span class="badge bg-primary badge-skill">Air空勤資格</span>
+                            <span class="badge badge-skill" style="background-color: #ff69b4;">急救心理學</span>
                         </div>
                     </div>
                 </div>
@@ -392,7 +393,7 @@
                                     <h5>🤝 醫院院合作企業優惠</h5>
                                     <ul class="list-unstyled">
                                         <li>警局（憑警徽就醫及購買醫療用品享8折優惠）</li>
-                                        <li>車廠（老闆親自買醫療用品享8折優惠）</li>
+                                        <li>車廠（老闆親自買醫療用品享7折優惠）</li>
                                         <li>朝銘（老闆親自買醫療用品享8折優惠）</li>
                                     </ul>
                                 </div>
