--- a/team.html
+++ b/team.html
@@ -254,7 +254,7 @@
             <div class="col-md-3">
                 <div class="card team-card">
                     <div class="team-photo-wrapper">
-                        <img src="./img/user.png" alt="團隊照" class="team-photo" />
+                        <img src="./img/team15.png" alt="團隊照" class="team-photo" />
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">夜嵐 醫師</h5>
