--- a/team.html
+++ b/team.html
@@ -342,10 +342,10 @@
                                 <div class="p-3 rounded shadow" style="background-color: #fff6cc;">
                                     <h5>🧾 基本費用</h5>
                                     <ul class="list-unstyled">
-                                        <li>門診：$2000</li>
-                                        <li>院外急救 - 南部：$2500</li>
-                                        <li>院外急救 - 中部：$2800</li>
-                                        <li>院外急救 - 北部：$3000</li>
+                                        <li>門診：$5000</li>
+                                        <li>院外急救 - 南部：$5500</li>
+                                        <li>院外急救 - 中部：$5800</li>
+                                        <li>院外急救 - 北部：$6000</li>
                                     </ul>
                                 </div>
                             </div>
@@ -355,11 +355,9 @@
                                 <div class="p-3 rounded shadow" style="background-color: #fff6cc;">
                                     <h5>➕ 附加費用</h5>
                                     <ul class="list-unstyled">
-                                        <li>手術：$1500</li>
-                                        <li>降壓針：$1000</li>
-                                        <li>葡萄糖：$1000</li>
-                                        <li>儀器檢查：$1000</li>
-                                        <li>病房（按日計算）：$1000</li>
+                                        <li>手術：視傷重$5000~$10000</li>
+                                        <li>葡萄糖：$2000</li>
+                                        <li>儀器檢查：$3000</li>
                                     </ul>
                                 </div>
                             </div>
@@ -369,9 +367,9 @@
                                 <div class="p-3 rounded shadow" style="background-color: #fff6cc;">
                                     <h5>🛒 商品費用</h5>
                                     <ul class="list-unstyled">
-                                        <li>止血帶（暫時止血）：$500</li>
+                                        <li>止血帶（暫時止血）：$800</li>
+                                        <li>草本繃帶：$1000</li>
                                         <li>滅火器：$2000</li>
-                                        <li>草本繃帶：$800</li>
                                     </ul>
                                 </div>
                             </div>
