--- a/team.html
+++ b/team.html
@@ -261,6 +261,7 @@
                         <p class="text-muted">急救員｜急診醫學部</p>
                         <div>
                             <span class="badge badge-skill" style="background-color: #ff69b4;">急救心理學</span>
+                            <span class="badge bg-primary badge-skill">Air空勤資格</span>
                         </div>
                     </div>
                 </div>
