--- a/team.html
+++ b/team.html
@@ -260,8 +260,8 @@
                         <h5 class="card-title">夜嵐 醫師</h5>
                         <p class="text-muted">急救員｜急診醫學部</p>
                         <div>
+                            <span class="badge bg-success badge-skill">執刀資格</span>
                             <span class="badge badge-skill" style="background-color: #ff69b4;">急救心理學</span>
-                            <span class="badge bg-primary badge-skill">Air空勤資格</span>
                         </div>
                     </div>
                 </div>
