--- a/team.html
+++ b/team.html
@@ -59,7 +59,7 @@
             <div class="col-md-3">
                 <div class="card team-card">
                     <div class="team-photo-wrapper">
-                        <img src="./img/team3.png" alt="團隊照" class="team-photo" />
+                        <img src="./img/team3-1.png" alt="團隊照" class="team-photo" />
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">黃曉翔 醫師</h5>
