--- a/team.html
+++ b/team.html
@@ -218,6 +218,7 @@
                         <h5 class="card-title">顧玄州 醫師</h5>
                         <p class="text-muted">急救員｜急診醫學部</p>
                         <div>
+                            <span class="badge bg-success badge-skill">執刀資格</span>
                             <span class="badge bg-primary badge-skill">Air空勤資格</span>
                         </div>
                     </div>
