--- a/team.html
+++ b/team.html
@@ -145,7 +145,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">李涵 醫師</h5>
-                        <p class="text-muted">急救員｜急診醫學部</p>
+                        <p class="text-muted">資深急救員｜急診醫學部</p>
                         <div>
                             <span class="badge bg-success badge-skill">執刀資格</span>
                             <span class="badge bg-primary badge-skill">Air空勤資格</span>
