--- a/team.html
+++ b/team.html
@@ -122,7 +122,21 @@
                     </div>
                 </div>
             </div>
-
+            <div class="col-md-3">
+                <div class="card team-card">
+                    <div class="team-photo-wrapper">
+                        <img src="./img/team17.png" alt="團隊照" class="team-photo" />
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">李涵 醫師</h5>
+                        <p class="text-muted">資深急救員｜急診醫學部</p>
+                        <div>
+                            <span class="badge bg-success badge-skill">執刀資格</span>
+                            <span class="badge bg-primary badge-skill">Air空勤資格</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- 成員卡片 3 -->
             <div class="col-md-3">
                 <div class="card team-card">
@@ -299,7 +313,7 @@
             <div class="col-md-3">
                 <div class="card team-card">
                     <div class="team-photo-wrapper">
-                        <img src="./img/user.png" alt="團隊照" class="team-photo" style="width: auto;"/>
+                        <img src="./img/user.png" alt="團隊照" class="team-photo" style="width: auto;" />
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">顧嫣珞 醫師</h5>
@@ -416,7 +430,7 @@
     </div>
     <div id="footer-placeholder"></div>
     <script src="./js/script.js"></script>
-<script src="./js/ER.js"></script>
+    <script src="./js/ER.js"></script>
 </body>
 
 </html>
