--- a/team.html
+++ b/team.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">李逸庭 醫師</h5>
-                        <p class="text-muted">資深急救員｜急診醫學部</p>
+                        <p class="text-muted">急救員｜急診醫學部</p>
                         <div>
                             <span class="badge bg-success badge-skill">執刀資格</span>
                             <span class="badge badge-skill" style="background-color: #ff69b4;">急救心理學</span>
