--- a/admin.html
+++ b/admin.html
@@ -17,6 +17,9 @@
     <div id="nav-placeholder"></div>
     <div class="container py-4">
         <h3 style="text-align: center;">全體員工名冊</h3>
+        <div class="row g-3 mb-4" id="staff-stats">
+            <!-- JS 會動態生成卡片 -->
+        </div>
         <h5 class="fw-bold mt-3">在職人員</h5>
         <table class="table table-bordered">
             <thead>
