--- a/team.html
+++ b/team.html
@@ -310,6 +310,20 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-3">
+                <div class="card team-card">
+                    <div class="team-photo-wrapper">
+                        <img src="./img/team19.png" alt="團隊照" class="team-photo" style="width: auto;" />
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">鮑伯 史都華 醫師</h5>
+                        <p class="text-muted">實習急救員｜急診醫學部</p>
+                        <div>
+                            <span class="badge bg-secondary badge-skill">暫無</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
