--- a/team.html
+++ b/team.html
@@ -122,6 +122,21 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-3">
+                <div class="card team-card">
+                    <div class="team-photo-wrapper">
+                        <img src="./img/team10-1.png" alt="團隊照" class="team-photo" />
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">野比 文泰 醫師</h5>
+                        <p class="text-muted">資深急救員｜急診醫學部</p>
+                        <div>
+                            <span class="badge bg-success badge-skill">執刀資格</span>
+                            <span class="badge bg-primary badge-skill">Air空勤資格</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <!-- 成員卡片 3 -->
             <div class="col-md-3">
                 <div class="card team-card">
@@ -195,20 +210,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="card team-card">
-                    <div class="team-photo-wrapper">
-                        <img src="./img/team10-1.png" alt="團隊照" class="team-photo" />
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">野比 文泰 醫師</h5>
-                        <p class="text-muted">急救員｜急診醫學部</p>
-                        <div>
-                            <span class="badge bg-primary badge-skill">Air空勤資格</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
             <div class="col-md-3">
                 <div class="card team-card">
                     <div class="team-photo-wrapper">
