--- a/team.html
+++ b/team.html
@@ -42,7 +42,7 @@
             <div class="col-md-3">
                 <div class="card team-card">
                     <div class="team-photo-wrapper">
-                        <img src="./img/team2.png" alt="團隊照" class="team-photo" />
+                        <img src="./img/team2-1.png" alt="團隊照" class="team-photo" />
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">夏以熙 醫師</h5>
