--- a/index_after_login.html
+++ b/index_after_login.html
@@ -21,7 +21,7 @@
             <div class="carousel-inner rounded shadow">
                 <!-- 1 -->
                 <div class="carousel-item active">
-                    <img src="./img/carousel1.png" class="d-block w-100" alt="強大的醫療團隊">
+                    <img src="./img/carousel1-1.png" class="d-block w-100" alt="強大的醫療團隊">
                     <div class="carousel-caption d-none d-md-block custom-caption">
                         <h5>強大的醫療團隊</h5>
                         <p>專業且具經驗的團隊，為您健康把關。</p>
