--- a/team.html
+++ b/team.html
@@ -24,7 +24,7 @@
             <div class="col-md-3">
                 <div class="card team-card">
                     <div class="team-photo-wrapper">
-                        <img src="./img/team1.png" alt="團隊照" class="team-photo" />
+                        <img src="./img/team1-1.png" alt="團隊照" class="team-photo" />
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">克拉拉 米勒斯 醫師</h5>
@@ -141,7 +141,7 @@
             <div class="col-md-3">
                 <div class="card team-card">
                     <div class="team-photo-wrapper">
-                        <img src="./img/team7.png" alt="團隊照" class="team-photo" />
+                        <img src="./img/team7-1.jpg" alt="團隊照" class="team-photo" />
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">潘紫豪 醫師</h5>
