--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
             <div class="col-md-3">
                 <div class="card team-card">
                     <div class="team-photo-wrapper">
-                        <img src="./img/team4.png" alt="團隊照" class="team-photo" />
+                        <img src="./img/team4-1.png" alt="團隊照" class="team-photo" />
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">朴明宇 醫師</h5>
@@ -125,7 +125,7 @@
             <div class="col-md-3">
                 <div class="card team-card">
                     <div class="team-photo-wrapper">
-                        <img src="./img/team10-1.png" alt="團隊照" class="team-photo" />
+                        <img src="./img/team10-2.png" alt="團隊照" class="team-photo" />
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">野比 文泰 醫師</h5>
@@ -279,7 +279,7 @@
                         <h5 class="card-title">蘇零 醫師</h5>
                         <p class="text-muted">急救員｜急診醫學部</p>
                         <div>
-                            <span class="badge bg-secondary badge-skill">暫無</span>
+                            <span class="badge badge-skill" style="background-color: #ff69b4;">急救心理學</span>
                         </div>
                     </div>
                 </div>
