--- a/team.html
+++ b/team.html
@@ -191,7 +191,7 @@
                         <h5 class="card-title">溫品彥 醫師</h5>
                         <p class="text-muted">急救員｜急診醫學部</p>
                         <div>
-                            <span class="badge bg-secondary badge-skill">暫無</span>
+                            <span class="badge bg-success badge-skill">執刀資格</span>
                         </div>
                     </div>
                 </div>
@@ -442,7 +442,7 @@
                 <ul class="nav nav-tabs" id="manualTabs" role="tablist"></ul>
                 <div class="tab-content mt-3" id="manualContent"></div>
                 <div class="text-end text-muted mt-3" style="font-size: 0.8rem;">
-                    最後修訂：2025-09-04
+                    最後修訂：2025-09-06
                 </div>
             </div>
         </div>
