--- a/team.html
+++ b/team.html
@@ -272,6 +272,20 @@
             <div class="col-md-3">
                 <div class="card team-card">
                     <div class="team-photo-wrapper">
+                        <img src="./img/team20.png" alt="團隊照" class="team-photo" style="width: auto;" />
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">松井 修有 醫師</h5>
+                        <p class="text-muted">急救員｜急診醫學部</p>
+                        <div>
+                            <span class="badge bg-secondary badge-skill">暫無</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card team-card">
+                    <div class="team-photo-wrapper">
                         <img src="./img/team14.png" alt="團隊照" class="team-photo" />
                     </div>
                     <div class="card-body">
@@ -297,20 +311,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3">
-                <div class="card team-card">
-                    <div class="team-photo-wrapper">
-                        <img src="./img/team20.png" alt="團隊照" class="team-photo" style="width: auto;" />
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">松井 修有 醫師</h5>
-                        <p class="text-muted">實習急救員｜急診醫學部</p>
-                        <div>
-                            <span class="badge bg-secondary badge-skill">暫無</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </div>
     </div>
 
